The weight of the images was reduced.

--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto - Restaurante</title>
+    <link rel="shortcut icon" href="https://img.icons8.com/pastel-glyph/64/fa314a/dinner--v1.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/about-us.css">
     <link rel="stylesheet" href="./css/contact.css">
@@ -14,7 +15,7 @@
 <body>
     <header class="header">
         <nav class="headboard flex modifier">
-            <div class="logo"><img src="./img/logo.png" alt="logo" class="logo_img"></div>
+            <div class="logo"><img src="./assets/img/logo.png" alt="logo" class="logo_img"></div>
             <div class="stripe"><span class="icon-bars" id="menu_button"></span></div>
             <ul class="menu" id="menu">
                 <li class="list">
