--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio - Restaurante</title>
+    <link rel="shortcut icon" href="https://img.icons8.com/pastel-glyph/64/fa314a/dinner--v1.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/fonts.css">
 </head>
@@ -12,7 +13,7 @@
 <body>
     <header class="header">
         <nav class="headboard flex modifier">
-            <div class="logo"><img src="./img/logo.png" alt="logo" class="logo_img"></div>
+            <div class="logo"><img src="./assets/img/logo.png" alt="logo" class="logo_img"></div>
             <div class="stripe"><span class="icon-bars" id="menu_button"></span></div>
             <ul class="menu" id="menu">
                 <li class="list">
@@ -63,7 +64,7 @@
         <section class="phone flex modifier">
             <h2 class="phone_title">Comprar desde el movil</h2>
             <div class="description">
-                <img src="./img/phone.jpeg" alt="phone" class="phone_img">
+                <img src="./assets/img/phone.jpeg" alt="phone" class="phone_img">
             </div>
             <div class="description">
                 <h3 class="number">1</h3>
@@ -81,28 +82,28 @@
             <h2 class="branch_office_title">Nuestras Sucursales</h2>
             <div class="stores">
                 <h3 class="store_title">Tienda 1</h3>
-                <img src="./img/store.jpg" alt="store" class="store_img">
+                <img src="./assets/img/store.jpg" alt="store" class="store_img">
                 <li class="store_list icon-asterisk">Manizales</li>
                 <li class="store_list icon-asterisk">Manizales</li>
                 <li class="store_list icon-asterisk">Manizales</li>
             </div>
             <div class="stores">
                 <h3 class="store_title">Tienda 2</h3>
-                <img src="./img/store.jpg" alt="store" class="store_img">
+                <img src="./assets/img/store.jpg" alt="store" class="store_img">
                 <li class="store_list icon-asterisk">Manizales</li>
                 <li class="store_list icon-asterisk">Manizales</li>
                 <li class="store_list icon-asterisk">Manizales</li>
             </div>
             <div class="stores">
                 <h3 class="store_title">Tienda 3</h3>
-                <img src="./img/store.jpg" alt="store" class="store_img">
+                <img src="./assets/img/store.jpg" alt="store" class="store_img">
                 <li class="store_list icon-asterisk">Manizales</li>
                 <li class="store_list icon-asterisk">Manizales</li>
                 <li class="store_list icon-asterisk">Manizales</li>
             </div>
             <div class="stores">
                 <h3 class="store_title">Tienda 4</h3>
-                <img src="./img/store.jpg" alt="store" class="store_img">
+                <img src="./assets/img/store.jpg" alt="store" class="store_img">
                 <li class="store_list icon-asterisk">Manizales</li>
                 <li class="store_list icon-asterisk">Manizales</li>
                 <li class="store_list icon-asterisk">Manizales</li>
@@ -114,17 +115,17 @@
             <div class="flex modifier">
                 <div class="testimonials">
                     <p class="testimonials_text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magnam libero corrupti saepe eum reiciendis dignissimos iusto doloremque debitis, dolore cupiditate id perferendis nam non dicta quaerat aut explicabo velit quo?</p>
-                    <img src="./img/profile1.jpg" alt="profile image" class="profile_img">
+                    <img src="./assets/img/profile1.jpg" alt="profile image" class="profile_img">
                     <h3 class="profile_name">Vanesa Perez</h3>
                 </div>
                 <div class="testimonials">
                     <p class="testimonials_text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magnam libero corrupti saepe eum reiciendis dignissimos iusto doloremque debitis, dolore cupiditate id perferendis nam non dicta quaerat aut explicabo velit quo?</p>
-                    <img src="./img/profile2.jpg" alt="profile image" class="profile_img">
+                    <img src="./assets/img/profile2.jpg" alt="profile image" class="profile_img">
                     <h3 class="profile_name">David Lozada</h3>
                 </div>
                 <div class="testimonials">
                     <p class="testimonials_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas porro corrupti molestias doloremque nostrum quae, natus error quia maiores autem cupiditate in cum numquam vel vero provident iure, culpa rerum.</p>
-                    <img src="./img/profile3.jpg" alt="profile image" class="profile_img">
+                    <img src="./assets/img/profile3.jpg" alt="profile image" class="profile_img">
                     <h3 class="profile_name">Mónica Rios</h3>
                 </div>
             </div>
