--- a/products.html
+++ b/products.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Productos - Restaurante</title>
+    <link rel="shortcut icon" href="https://img.icons8.com/pastel-glyph/64/fa314a/dinner--v1.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/about-us.css">
     <link rel="stylesheet" href="./css/products.css">
@@ -14,7 +15,7 @@
 <body>
     <header class="header">
         <nav class="headboard flex modifier">
-            <div class="logo"><img src="./img/logo.png" alt="logo" class="logo_img"></div>
+            <div class="logo"><img src="./assets/img/logo.png" alt="logo" class="logo_img"></div>
             <div class="stripe"><span class="icon-bars" id="menu_button"></span></div>
             <ul class="menu" id="menu">
                 <li class="list">
@@ -36,38 +37,38 @@
         <section class="products flex modifier">
             <h1 class="carta_title">Nuestro Menu</h1>
             <article class="carta">
-                <img src="./img/plato.jpg" alt="menu item image" class="carta_img">
-                <h2 class="plato_title">Plato 1</h2>
+                <img src="./assets/img/plate.jpg" alt="menu item image" class="carta_img">
+                <h2 class="plate_title">Plato 1</h2>
                 <p class="carta_text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat rerum vitae aspernatur repellat! Nisi quasi aliquid quidem sapiente atque est nam, nemo sunt ullam dicta, consectetur iusto. Repudiandae, dolorum esse!</p>
                 <input type="submit" value="Comprar" class="buy">
             </article>
             <article class="carta">
-                <img src="./img/plato.jpg" alt="menu item image" class="carta_img">
-                <h2 class="plato_title">Plato 2</h2>
+                <img src="./assets/img/plate.jpg" alt="menu item image" class="carta_img">
+                <h2 class="plate_title">Plato 2</h2>
                 <p class="carta_text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat rerum vitae aspernatur repellat! Nisi quasi aliquid quidem sapiente atque est nam, nemo sunt ullam dicta, consectetur iusto. Repudiandae, dolorum esse!</p>
                 <input type="submit" value="Comprar" class="buy">
             </article>
             <article class="carta">
-                <img src="./img/plato.jpg" alt="menu item image" class="carta_img">
-                <h2 class="plato_title">Plato 3</h2>
+                <img src="./assets/img/plate.jpg" alt="menu item image" class="carta_img">
+                <h2 class="plate_title">Plato 3</h2>
                 <p class="carta_text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat rerum vitae aspernatur repellat! Nisi quasi aliquid quidem sapiente atque est nam, nemo sunt ullam dicta, consectetur iusto. Repudiandae, dolorum esse!</p>
                 <input type="submit" value="Comprar" class="buy">
             </article>
             <article class="carta">
-                <img src="./img/plato.jpg" alt="menu item image" class="carta_img">
-                <h2 class="plato_title">Plato 4</h2>
+                <img src="./assets/img/plate.jpg" alt="menu item image" class="carta_img">
+                <h2 class="plate_title">Plato 4</h2>
                 <p class="carta_text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat rerum vitae aspernatur repellat! Nisi quasi aliquid quidem sapiente atque est nam, nemo sunt ullam dicta, consectetur iusto. Repudiandae, dolorum esse!</p>
                 <input type="submit" value="Comprar" class="buy">
             </article>
             <article class="carta">
-                <img src="./img/plato.jpg" alt="menu item image" class="carta_img">
-                <h2 class="plato_title">Plato 5</h2>
+                <img src="./assets/img/plate.jpg" alt="menu item image" class="carta_img">
+                <h2 class="plate_title">Plato 5</h2>
                 <p class="carta_text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat rerum vitae aspernatur repellat! Nisi quasi aliquid quidem sapiente atque est nam, nemo sunt ullam dicta, consectetur iusto. Repudiandae, dolorum esse!</p>
                 <input type="submit" value="Comprar" class="buy">
             </article>
             <article class="carta">
-                <img src="./img/plato.jpg" alt="menu item image" class="carta_img">
-                <h2 class="plato_title">Plato 6</h2>
+                <img src="./assets/img/plate.jpg" alt="menu item image" class="carta_img">
+                <h2 class="plate_title">Plato 6</h2>
                 <p class="carta_text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat rerum vitae aspernatur repellat! Nisi quasi aliquid quidem sapiente atque est nam, nemo sunt ullam dicta, consectetur iusto. Repudiandae, dolorum esse!</p>
                 <input type="submit" value="Comprar" class="buy">
             </article>
