--- a/about-us.html
+++ b/about-us.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nosotros - Restaurante</title>
+    <link rel="shortcut icon" href="https://img.icons8.com/pastel-glyph/64/fa314a/dinner--v1.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/about-us.css">
     <link rel="stylesheet" href="./css/fonts.css">
@@ -13,7 +14,7 @@
 <body>
     <header class="header">
         <nav class="headboard flex modifier">
-            <div class="logo"><img src="./img/logo.png" alt="logo" class="logo_img"></div>
+            <div class="logo"><img src="./assets/img/logo.png" alt="logo" class="logo_img"></div>
             <div class="stripe"><span class="icon-bars" id="menu_button"></span></div>
             <ul class="menu" id="menu">
                 <li class="list">
@@ -37,20 +38,20 @@
             <div class="flex modifier">
                 <h1 class="about_us_title">Sobre Nosotros</h1>
                 <p class="about_us_text">
-                    <img src="./img/chef.jpg" alt="about us image" class="about_us_img"> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Est ipsa blanditiis, cum pariatur totam repudiandae atque nemo, quae commodi quos non vel beatae, distinctio
-                    sit corporis minus! Impedit, explicabo quaerat tempore accusantium totam vel excepturi, pariatur quod reiciendis sint facere consectetur doloremque consequatur officiis esse, nisi magni iste! Alias dolor excepturi, laborum velit sed
-                    quaerat minima facilis eligendi inventore necessitatibus asperiores exercitationem quasi neque modi, ad veniam.<br> Quam, pariatur at magni tenetur culpa, repellat modi ullam nisi officia, sunt fugiat autem sint deleniti quibusdam
-                    dolore vitae deserunt suscipit esse ab tempora soluta in a! Itaque sint delectus, saepe cum laudantium quisquam dignissimos dolor rem, ipsum impedit velit corporis beatae, dolorum dolores quo cumque odio culpa.<br> Odit, et quas! Aut
-                    corporis voluptate ea blanditiis pariatur illo, eius tenetur deserunt ratione itaque saepe ab vero atque at id voluptatibus laudantium reiciendis quidem praesentium.<br> Natus, praesentium. Nesciunt omnis quae quibusdam dolor optio
-                    sapiente accusantium, dolores accusamus magnam laborum distinctio repellendus cum sint. Laudantium ad enim nostrum voluptatibus qui id quisquam sunt esse quo quod voluptates, explicabo sit ducimus ex omnis atque blanditiis pariatur,
-                    necessitatibus eaque. Accusamus sed fugiat, nesciunt quos exercitationem quod ut aperiam nisi numquam quibusdam veniam cum blanditiis culpa rem quis?</p>
+                    <img src="./assets/img/chef.jpg" alt="about us image" class="about_us_img"> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Est ipsa blanditiis, cum pariatur totam repudiandae atque nemo, quae commodi quos non vel beatae,
+                    distinctio sit corporis minus! Impedit, explicabo quaerat tempore accusantium totam vel excepturi, pariatur quod reiciendis sint facere consectetur doloremque consequatur officiis esse, nisi magni iste! Alias dolor excepturi, laborum
+                    velit sed quaerat minima facilis eligendi inventore necessitatibus asperiores exercitationem quasi neque modi, ad veniam.<br> Quam, pariatur at magni tenetur culpa, repellat modi ullam nisi officia, sunt fugiat autem sint deleniti
+                    quibusdam dolore vitae deserunt suscipit esse ab tempora soluta in a! Itaque sint delectus, saepe cum laudantium quisquam dignissimos dolor rem, ipsum impedit velit corporis beatae, dolorum dolores quo cumque odio culpa.<br> Odit,
+                    et quas! Aut corporis voluptate ea blanditiis pariatur illo, eius tenetur deserunt ratione itaque saepe ab vero atque at id voluptatibus laudantium reiciendis quidem praesentium.<br> Natus, praesentium. Nesciunt omnis quae quibusdam
+                    dolor optio sapiente accusantium, dolores accusamus magnam laborum distinctio repellendus cum sint. Laudantium ad enim nostrum voluptatibus qui id quisquam sunt esse quo quod voluptates, explicabo sit ducimus ex omnis atque blanditiis
+                    pariatur, necessitatibus eaque. Accusamus sed fugiat, nesciunt quos exercitationem quod ut aperiam nisi numquam quibusdam veniam cum blanditiis culpa rem quis?</p>
             </div>
         </section>
         <secion class="history">
             <div class="flex modifier">
                 <h1 class="history_title">Nuestra Historia</h1>
-                <p class="history_text"><img src="./img/chef2.jpg" alt="history image" class="history_img">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti adipisci harum facere ullam! Quam nesciunt maxime harum totam id at tempora rem nam nemo, officia sit
-                    inventore fugit facere sint labore earum esse error magnam libero unde! Minima similique tempore facilis quisquam saepe omnis, vero animi officia quasi obcaecati, aliquid veritatis corporis laboriosam error suscipit cum.<br> Accusamus
+                <p class="history_text"><img src="./assets/img/chef2.jpg" alt="history image" class="history_img">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti adipisci harum facere ullam! Quam nesciunt maxime harum totam id at tempora rem nam nemo, officia
+                    sit inventore fugit facere sint labore earum esse error magnam libero unde! Minima similique tempore facilis quisquam saepe omnis, vero animi officia quasi obcaecati, aliquid veritatis corporis laboriosam error suscipit cum.<br> Accusamus
                     pariatur a alias eveniet sint accusantium fugit dolorum deleniti dignissimos nam. Eos quod ea numquam dicta, aut ullam perferendis modi praesentium mollitia ratione fugit.<br> Deserunt laboriosam ratione minus! Atque at non maxime
                     asperiores esse natus dolor culpa, deserunt nihil mollitia vero neque tempora illo accusantium distinctio veniam quam possimus temporibus? Deserunt ex deleniti natus quasi distinctio sapiente laudantium neque molestias dolor in nobis,
                     tenetur, porro iusto rerum magni minus maxime aliquid dolore autem consequuntur sed! Dolor illo quo ipsum ab! Voluptates dignissimos aliquid exercitationem ratione adipisci, assumenda nesciunt quis hic nihil molestias natus nemo blanditiis
