The interface language was updated to English.

--- a/about-us.html
+++ b/about-us.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nosotros - Restaurante</title>
+    <title>About - Restaurant</title>
     <link rel="shortcut icon" href="https://img.icons8.com/pastel-glyph/64/fa314a/dinner--v1.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/about-us.css">
@@ -18,16 +18,16 @@
             <div class="stripe"><span class="icon-bars" id="menu_button"></span></div>
             <ul class="menu" id="menu">
                 <li class="list">
-                    <a href="./index.html" class="link">Inicio</a>
+                    <a href="./index.html" class="link">Home</a>
                 </li>
                 <li class="list">
-                    <a href="./about-us.html" class="link selection">Nosotros</a>
+                    <a href="./about-us.html" class="link selection">About</a>
                 </li>
                 <li class="list">
-                    <a href="./products.html" class="link">Productos</a>
+                    <a href="./products.html" class="link">Products</a>
                 </li>
                 <li class="list">
-                    <a href="./contact.html" class="link">Contacto</a>
+                    <a href="./contact.html" class="link">Contact</a>
                 </li>
             </ul>
         </nav>
@@ -36,7 +36,7 @@
     <main>
         <section class="about_us">
             <div class="flex modifier">
-                <h1 class="about_us_title">Sobre Nosotros</h1>
+                <h1 class="about_us_title">About us</h1>
                 <p class="about_us_text">
                     <img src="./assets/img/chef.jpg" alt="about us image" class="about_us_img"> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Est ipsa blanditiis, cum pariatur totam repudiandae atque nemo, quae commodi quos non vel beatae,
                     distinctio sit corporis minus! Impedit, explicabo quaerat tempore accusantium totam vel excepturi, pariatur quod reiciendis sint facere consectetur doloremque consequatur officiis esse, nisi magni iste! Alias dolor excepturi, laborum
@@ -44,12 +44,13 @@
                     quibusdam dolore vitae deserunt suscipit esse ab tempora soluta in a! Itaque sint delectus, saepe cum laudantium quisquam dignissimos dolor rem, ipsum impedit velit corporis beatae, dolorum dolores quo cumque odio culpa.<br> Odit,
                     et quas! Aut corporis voluptate ea blanditiis pariatur illo, eius tenetur deserunt ratione itaque saepe ab vero atque at id voluptatibus laudantium reiciendis quidem praesentium.<br> Natus, praesentium. Nesciunt omnis quae quibusdam
                     dolor optio sapiente accusantium, dolores accusamus magnam laborum distinctio repellendus cum sint. Laudantium ad enim nostrum voluptatibus qui id quisquam sunt esse quo quod voluptates, explicabo sit ducimus ex omnis atque blanditiis
-                    pariatur, necessitatibus eaque. Accusamus sed fugiat, nesciunt quos exercitationem quod ut aperiam nisi numquam quibusdam veniam cum blanditiis culpa rem quis?</p>
+                    pariatur, necessitatibus eaque. Accusamus sed fugiat, nesciunt quos exercitationem quod ut aperiam nisi numquam quibusdam veniam cum blanditiis culpa rem quis?
+                </p>
             </div>
         </section>
         <secion class="history">
             <div class="flex modifier">
-                <h1 class="history_title">Nuestra Historia</h1>
+                <h1 class="history_title">History</h1>
                 <p class="history_text"><img src="./assets/img/chef2.jpg" alt="history image" class="history_img">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti adipisci harum facere ullam! Quam nesciunt maxime harum totam id at tempora rem nam nemo, officia
                     sit inventore fugit facere sint labore earum esse error magnam libero unde! Minima similique tempore facilis quisquam saepe omnis, vero animi officia quasi obcaecati, aliquid veritatis corporis laboriosam error suscipit cum.<br> Accusamus
                     pariatur a alias eveniet sint accusantium fugit dolorum deleniti dignissimos nam. Eos quod ea numquam dicta, aut ullam perferendis modi praesentium mollitia ratione fugit.<br> Deserunt laboriosam ratione minus! Atque at non maxime
@@ -60,25 +61,27 @@
             </div>
         </secion>
     </main>
+
     <footer class="foot flex modifier">
         <div class="foot_item">
-            <h2 class="foot_title">Nosotros</h2>
+            <h2 class="foot_title">About</h2>
             <p class="foot_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate dolore sed fuga nostrum safootnte ipsum fugit facere, magni earum eaque incidunt error commodi maxime minus enim non autem, accusantium corrupti!</p>
         </div>
         <div class="foot_item">
-            <h2 class="foot_title">Marcas Asociadas</h2>
-            <li class="foot_list"><a href="" class="foot_link">Marca 1</a></li>
-            <li class="foot_list"><a href="" class="foot_link">Marca 2</a></li>
-            <li class="foot_list"><a href="" class="foot_link">Marca 3</a></li>
+            <h2 class="foot_title">Associated Brands</h2>
+            <li class="foot_list"><a href="" class="foot_link">Brand 1</a></li>
+            <li class="foot_list"><a href="" class="foot_link">Brand 2</a></li>
+            <li class="foot_list"><a href="" class="foot_link">Brand 3</a></li>
         </div>
         <div class="foot_item">
-            <h2 class="foot_title">Enlaces de interes</h2>
-            <li class="foot_list"><a href="" class="foot_link">Administración</a></li>
-            <li class="foot_list"><a href="" class="foot_link">Teléfono</a></li>
+            <h2 class="foot_title">Links of interest</h2>
+            <li class="foot_list"><a href="" class="foot_link">Administration</a></li>
+            <li class="foot_list"><a href="" class="foot_link">Phone</a></li>
             <li class="foot_list"><a href="" class="foot_link">Email</a></li>
         </div>
-        <span class="copyright">© 2021 Todos los derechos reservados. <br>Carlos Alberto Rios</span>
+        <span class="copyright">© 2021 All rights reserved. <br>Carlos Alberto Rios</span>
     </footer>
+
 
     <script src="./js/menu.js"></script>
 </body>
