--- a/contact.html
+++ b/contact.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacto - Restaurante</title>
+    <title>Contact - Restaurant</title>
     <link rel="shortcut icon" href="https://img.icons8.com/pastel-glyph/64/fa314a/dinner--v1.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/about-us.css">
@@ -19,16 +19,16 @@
             <div class="stripe"><span class="icon-bars" id="menu_button"></span></div>
             <ul class="menu" id="menu">
                 <li class="list">
-                    <a href="./index.html" class="link">Inicio</a>
+                    <a href="./index.html" class="link">Home</a>
                 </li>
                 <li class="list">
-                    <a href="./about-us.html" class="link">Nosotros</a>
+                    <a href="./about-us.html" class="link">About</a>
                 </li>
                 <li class="list">
-                    <a href="./products.html" class="link">Productos</a>
+                    <a href="./products.html" class="link">Products</a>
                 </li>
                 <li class="list">
-                    <a href="./contact.html" class="link selection">Contacto</a>
+                    <a href="./contact.html" class="link selection">Contact</a>
                 </li>
             </ul>
         </nav>
@@ -36,26 +36,26 @@
 
     <main>
         <section class="contact flex modifier">
-            <h1 class="contact_title">Contactanos</h1>
+            <h1 class="contact_title">Contact us</h1>
             <div class="contact_info">
-                <h2 class="info_title">Nuestros Contactos</h2>
+                <h2 class="info_title">Our Contact Means</h2>
                 <p class="info_text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem similique modi officiis voluptas ipsam expedita at exercitationem provident velit, asperiores facere dignissimos. Reiciendis eveniet ab ratione, velit nobis expedita quo!</p>
-                <a href="" class="info_link icon-whatsapp">Escribenos a Whatsapp</a>
-                <a href="" class="info_link icon-mobile">Llamanos</a>
-                <a href="" class="info_link icon-envelope">Envianos un Email</a>
+                <a href="" class="info_link icon-whatsapp">Write us to Whatsapp</a>
+                <a href="" class="info_link icon-mobile">Call us</a>
+                <a href="" class="info_link icon-envelope">Send us an email</a>
             </div>
             <div class="contact_info">
                 <form class="contact_form" action="">
-                    <label for="" class="contact_label">Nombre</label>
+                    <label for="" class="contact_label">Name</label>
                     <input type="text" class="contact_input">
-                    <label for="" class="contact_label">Teléfono</label>
+                    <label for="" class="contact_label">Phone</label>
                     <input type="text" class="contact_input">
                     <label for="" class="contact_label">Email</label>
                     <input type="text" class="contact_input">
-                    <label for="" class="contact_label">Mensaje</label>
+                    <label for="" class="contact_label">Message</label>
                     <textarea name="" id="" cols="30" rows="10" class="contact_input"></textarea>
 
-                    <input type="submit" value="Enviar" class="contact_buton">
+                    <input type="submit" value="Send" class="contact_buton">
                 </form>
             </div>
         </section>
@@ -63,23 +63,24 @@
 
     <footer class="foot flex modifier">
         <div class="foot_item">
-            <h2 class="foot_title">Nosotros</h2>
+            <h2 class="foot_title">About</h2>
             <p class="foot_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate dolore sed fuga nostrum safootnte ipsum fugit facere, magni earum eaque incidunt error commodi maxime minus enim non autem, accusantium corrupti!</p>
         </div>
         <div class="foot_item">
-            <h2 class="foot_title">Marcas Asociadas</h2>
-            <li class="foot_list"><a href="" class="foot_link">Marca 1</a></li>
-            <li class="foot_list"><a href="" class="foot_link">Marca 2</a></li>
-            <li class="foot_list"><a href="" class="foot_link">Marca 3</a></li>
+            <h2 class="foot_title">Associated Brands</h2>
+            <li class="foot_list"><a href="" class="foot_link">Brand 1</a></li>
+            <li class="foot_list"><a href="" class="foot_link">Brand 2</a></li>
+            <li class="foot_list"><a href="" class="foot_link">Brand 3</a></li>
         </div>
         <div class="foot_item">
-            <h2 class="foot_title">Enlaces de interes</h2>
-            <li class="foot_list"><a href="" class="foot_link">Administración</a></li>
-            <li class="foot_list"><a href="" class="foot_link">Teléfono</a></li>
+            <h2 class="foot_title">Links of interest</h2>
+            <li class="foot_list"><a href="" class="foot_link">Administration</a></li>
+            <li class="foot_list"><a href="" class="foot_link">Phone</a></li>
             <li class="foot_list"><a href="" class="foot_link">Email</a></li>
         </div>
-        <span class="copyright">© 2021 Todos los derechos reservados. <br>Carlos Alberto Rios</span>
+        <span class="copyright">© 2021 All rights reserved. <br>Carlos Alberto Rios</span>
     </footer>
+
 
     <script src="./js/menu.js"></script>
 </body>
