--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio - Restaurante</title>
+    <title>Home - Restaurant</title>
     <link rel="shortcut icon" href="https://img.icons8.com/pastel-glyph/64/fa314a/dinner--v1.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/fonts.css">
@@ -17,52 +17,52 @@
             <div class="stripe"><span class="icon-bars" id="menu_button"></span></div>
             <ul class="menu" id="menu">
                 <li class="list">
-                    <a href="./index.html" class="link selection">Inicio</a>
+                    <a href="./index.html" class="link selection">Home</a>
                 </li>
                 <li class="list">
-                    <a href="./about-us.html" class="link">Nosotros</a>
+                    <a href="./about-us.html" class="link">About</a>
                 </li>
                 <li class="list">
-                    <a href="./products.html" class="link">Productos</a>
+                    <a href="./products.html" class="link">Products</a>
                 </li>
                 <li class="list">
-                    <a href="./contact.html" class="link">Contacto</a>
+                    <a href="./contact.html" class="link">Contact</a>
                 </li>
             </ul>
         </nav>
         <div class="text modifier">
-            <h1 class="title">Lo mejor <br> está por llegar</h1>
-            <a href="" class="button">Conocenos</a>
+            <h1 class="title">The best <br> is yet to come</h1>
+            <a href="" class="button">Know us!</a>
         </div>
     </header>
 
     <main>
         <section class="main flex modifier">
-            <h1 class="main_title">Bienvenido</h1>
+            <h1 class="main_title">Welcome</h1>
             <div class="promo">
                 <span class="icon-cutlery"></span>
-                <h2 class="promo_title">Nuestras especialidades</h2>
+                <h2 class="promo_title">Our specialties</h2>
                 <p class="promo_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At consequatur officia illum, tempora, nostrum eum quo repellendus, ad esse quibusdam maxime iste reiciendis vel eos veniam. Facilis ducimus illo cumque.</p>
             </div>
             <div class="promo">
                 <span class="icon-asterisk"></span>
-                <h2 class="promo_title">Especialmente para tí</h2>
+                <h2 class="promo_title">Specially for you</h2>
                 <p class="promo_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At consequatur officia illum, tempora, nostrum eum quo repellendus, ad esse quibusdam maxime iste reiciendis vel eos veniam. Facilis ducimus illo cumque.</p>
             </div>
             <div class="promo">
                 <span class="icon-heart"></span>
-                <h2 class="promo_title">Comida Saludable</h2>
+                <h2 class="promo_title">Healthy food</h2>
                 <p class="promo_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At consequatur officia illum, tempora, nostrum eum quo repellendus, ad esse quibusdam maxime iste reiciendis vel eos veniam. Facilis ducimus illo cumque.</p>
             </div>
             <div class="promo">
                 <span class="icon-lightbulb-o"></span>
-                <h2 class="promo_title">Animate a probarlos</h2>
+                <h2 class="promo_title">Dare to try them</h2>
                 <p class="promo_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At consequatur officia illum, tempora, nostrum eum quo repellendus, ad esse quibusdam maxime iste reiciendis vel eos veniam. Facilis ducimus illo cumque.</p>
             </div>
         </section>
 
         <section class="phone flex modifier">
-            <h2 class="phone_title">Comprar desde el movil</h2>
+            <h2 class="phone_title">Buy from mobile</h2>
             <div class="description">
                 <img src="./assets/img/phone.jpeg" alt="phone" class="phone_img">
             </div>
@@ -79,30 +79,30 @@
         </section>
 
         <section class="branch_office flex modifier">
-            <h2 class="branch_office_title">Nuestras Sucursales</h2>
+            <h2 class="branch_office_title">Locations</h2>
             <div class="stores">
-                <h3 class="store_title">Tienda 1</h3>
+                <h3 class="store_title">Store 1</h3>
                 <img src="./assets/img/store.jpg" alt="store" class="store_img">
                 <li class="store_list icon-asterisk">Manizales</li>
                 <li class="store_list icon-asterisk">Manizales</li>
                 <li class="store_list icon-asterisk">Manizales</li>
             </div>
             <div class="stores">
-                <h3 class="store_title">Tienda 2</h3>
+                <h3 class="store_title">Store 2</h3>
                 <img src="./assets/img/store.jpg" alt="store" class="store_img">
                 <li class="store_list icon-asterisk">Manizales</li>
                 <li class="store_list icon-asterisk">Manizales</li>
                 <li class="store_list icon-asterisk">Manizales</li>
             </div>
             <div class="stores">
-                <h3 class="store_title">Tienda 3</h3>
+                <h3 class="store_title">Store 3</h3>
                 <img src="./assets/img/store.jpg" alt="store" class="store_img">
                 <li class="store_list icon-asterisk">Manizales</li>
                 <li class="store_list icon-asterisk">Manizales</li>
                 <li class="store_list icon-asterisk">Manizales</li>
             </div>
             <div class="stores">
-                <h3 class="store_title">Tienda 4</h3>
+                <h3 class="store_title">Store 4</h3>
                 <img src="./assets/img/store.jpg" alt="store" class="store_img">
                 <li class="store_list icon-asterisk">Manizales</li>
                 <li class="store_list icon-asterisk">Manizales</li>
@@ -111,7 +111,7 @@
         </section>
 
         <section class="customers flex modifier">
-            <h2 class="customers_title">Opiniones de Clientes</h2>
+            <h2 class="customers_title">Customer Reviews</h2>
             <div class="flex modifier">
                 <div class="testimonials">
                     <p class="testimonials_text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magnam libero corrupti saepe eum reiciendis dignissimos iusto doloremque debitis, dolore cupiditate id perferendis nam non dicta quaerat aut explicabo velit quo?</p>
@@ -134,22 +134,22 @@
 
     <footer class="foot flex modifier">
         <div class="foot_item">
-            <h2 class="foot_title">Nosotros</h2>
+            <h2 class="foot_title">About</h2>
             <p class="foot_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate dolore sed fuga nostrum safootnte ipsum fugit facere, magni earum eaque incidunt error commodi maxime minus enim non autem, accusantium corrupti!</p>
         </div>
         <div class="foot_item">
-            <h2 class="foot_title">Marcas Asociadas</h2>
-            <li class="foot_list"><a href="" class="foot_link">Marca 1</a></li>
-            <li class="foot_list"><a href="" class="foot_link">Marca 2</a></li>
-            <li class="foot_list"><a href="" class="foot_link">Marca 3</a></li>
+            <h2 class="foot_title">Associated Brands</h2>
+            <li class="foot_list"><a href="" class="foot_link">Brand 1</a></li>
+            <li class="foot_list"><a href="" class="foot_link">Brand 2</a></li>
+            <li class="foot_list"><a href="" class="foot_link">Brand 3</a></li>
         </div>
         <div class="foot_item">
-            <h2 class="foot_title">Enlaces de interes</h2>
-            <li class="foot_list"><a href="" class="foot_link">Administración</a></li>
-            <li class="foot_list"><a href="" class="foot_link">Teléfono</a></li>
+            <h2 class="foot_title">Links of interest</h2>
+            <li class="foot_list"><a href="" class="foot_link">Administration</a></li>
+            <li class="foot_list"><a href="" class="foot_link">Phone</a></li>
             <li class="foot_list"><a href="" class="foot_link">Email</a></li>
         </div>
-        <span class="copyright">© 2021 Todos los derechos reservados. <br>Carlos Alberto Rios</span>
+        <span class="copyright">© 2021 All rights reserved. <br>Carlos Alberto Rios</span>
     </footer>
 
     <script src="./js/menu.js"></script>
