--- a/products.html
+++ b/products.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Productos - Restaurante</title>
+    <title>Products - Restaurant</title>
     <link rel="shortcut icon" href="https://img.icons8.com/pastel-glyph/64/fa314a/dinner--v1.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/about-us.css">
@@ -19,58 +19,58 @@
             <div class="stripe"><span class="icon-bars" id="menu_button"></span></div>
             <ul class="menu" id="menu">
                 <li class="list">
-                    <a href="./index.html" class="link">Inicio</a>
+                    <a href="./index.html" class="link">Home</a>
                 </li>
                 <li class="list">
-                    <a href="./about-us.html" class="link">Nosotros</a>
+                    <a href="./about-us.html" class="link">About</a>
                 </li>
                 <li class="list">
-                    <a href="./products.html" class="link selection">Productos</a>
+                    <a href="./products.html" class="link selection">Products</a>
                 </li>
                 <li class="list">
-                    <a href="./contact.html" class="link">Contacto</a>
+                    <a href="./contact.html" class="link">Contact</a>
                 </li>
             </ul>
         </nav>
     </header>
     <main>
         <section class="products flex modifier">
-            <h1 class="carta_title">Nuestro Menu</h1>
+            <h1 class="carta_title">Menu</h1>
             <article class="carta">
                 <img src="./assets/img/plate.jpg" alt="menu item image" class="carta_img">
-                <h2 class="plate_title">Plato 1</h2>
+                <h2 class="plate_title">Plate 1</h2>
                 <p class="carta_text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat rerum vitae aspernatur repellat! Nisi quasi aliquid quidem sapiente atque est nam, nemo sunt ullam dicta, consectetur iusto. Repudiandae, dolorum esse!</p>
-                <input type="submit" value="Comprar" class="buy">
+                <input type="submit" value="Buy" class="buy">
             </article>
             <article class="carta">
                 <img src="./assets/img/plate.jpg" alt="menu item image" class="carta_img">
-                <h2 class="plate_title">Plato 2</h2>
+                <h2 class="plate_title">Plate 2</h2>
                 <p class="carta_text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat rerum vitae aspernatur repellat! Nisi quasi aliquid quidem sapiente atque est nam, nemo sunt ullam dicta, consectetur iusto. Repudiandae, dolorum esse!</p>
-                <input type="submit" value="Comprar" class="buy">
+                <input type="submit" value="Buy" class="buy">
             </article>
             <article class="carta">
                 <img src="./assets/img/plate.jpg" alt="menu item image" class="carta_img">
-                <h2 class="plate_title">Plato 3</h2>
+                <h2 class="plate_title">Plate 3</h2>
                 <p class="carta_text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat rerum vitae aspernatur repellat! Nisi quasi aliquid quidem sapiente atque est nam, nemo sunt ullam dicta, consectetur iusto. Repudiandae, dolorum esse!</p>
-                <input type="submit" value="Comprar" class="buy">
+                <input type="submit" value="Buy" class="buy">
             </article>
             <article class="carta">
                 <img src="./assets/img/plate.jpg" alt="menu item image" class="carta_img">
-                <h2 class="plate_title">Plato 4</h2>
+                <h2 class="plate_title">Plate 4</h2>
                 <p class="carta_text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat rerum vitae aspernatur repellat! Nisi quasi aliquid quidem sapiente atque est nam, nemo sunt ullam dicta, consectetur iusto. Repudiandae, dolorum esse!</p>
-                <input type="submit" value="Comprar" class="buy">
+                <input type="submit" value="Buy" class="buy">
             </article>
             <article class="carta">
                 <img src="./assets/img/plate.jpg" alt="menu item image" class="carta_img">
-                <h2 class="plate_title">Plato 5</h2>
+                <h2 class="plate_title">Plate 5</h2>
                 <p class="carta_text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat rerum vitae aspernatur repellat! Nisi quasi aliquid quidem sapiente atque est nam, nemo sunt ullam dicta, consectetur iusto. Repudiandae, dolorum esse!</p>
-                <input type="submit" value="Comprar" class="buy">
+                <input type="submit" value="Buy" class="buy">
             </article>
             <article class="carta">
                 <img src="./assets/img/plate.jpg" alt="menu item image" class="carta_img">
-                <h2 class="plate_title">Plato 6</h2>
+                <h2 class="plate_title">Plate 6</h2>
                 <p class="carta_text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat rerum vitae aspernatur repellat! Nisi quasi aliquid quidem sapiente atque est nam, nemo sunt ullam dicta, consectetur iusto. Repudiandae, dolorum esse!</p>
-                <input type="submit" value="Comprar" class="buy">
+                <input type="submit" value="Buy" class="buy">
             </article>
 
         </section>
@@ -78,23 +78,24 @@
 
     <footer class="foot flex modifier">
         <div class="foot_item">
-            <h2 class="foot_title">Nosotros</h2>
+            <h2 class="foot_title">About</h2>
             <p class="foot_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate dolore sed fuga nostrum safootnte ipsum fugit facere, magni earum eaque incidunt error commodi maxime minus enim non autem, accusantium corrupti!</p>
         </div>
         <div class="foot_item">
-            <h2 class="foot_title">Marcas Asociadas</h2>
-            <li class="foot_list"><a href="" class="foot_link">Marca 1</a></li>
-            <li class="foot_list"><a href="" class="foot_link">Marca 2</a></li>
-            <li class="foot_list"><a href="" class="foot_link">Marca 3</a></li>
+            <h2 class="foot_title">Associated Brands</h2>
+            <li class="foot_list"><a href="" class="foot_link">Brand 1</a></li>
+            <li class="foot_list"><a href="" class="foot_link">Brand 2</a></li>
+            <li class="foot_list"><a href="" class="foot_link">Brand 3</a></li>
         </div>
         <div class="foot_item">
-            <h2 class="foot_title">Enlaces de interes</h2>
-            <li class="foot_list"><a href="" class="foot_link">Administración</a></li>
-            <li class="foot_list"><a href="" class="foot_link">Teléfono</a></li>
+            <h2 class="foot_title">Links of interest</h2>
+            <li class="foot_list"><a href="" class="foot_link">Administration</a></li>
+            <li class="foot_list"><a href="" class="foot_link">Phone</a></li>
             <li class="foot_list"><a href="" class="foot_link">Email</a></li>
         </div>
-        <span class="copyright">© 2021 Todos los derechos reservados. <br>Carlos Alberto Rios</span>
+        <span class="copyright">© 2021 All rights reserved. <br>Carlos Alberto Rios</span>
     </footer>
+
 
     <script src="./js/menu.js"></script>
 </body>
